--- a/public/index.html
+++ b/public/index.html
@@ -603,7 +603,7 @@
 <body>
 
 <div class="header">
-  <h1>🎵 Enhanced Music Player</h1>
+  <h1>🎵 Songify</h1>
   <div class="controls-top">
     <div class="search-container">
       <input type="text" id="searchInput" placeholder="Search songs, artists, albums...">
